@@ -1,3 +1,14 @@
+2010-01-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* ucm.el (ucm-actb-checkin-command)
+	(ucm-checkin-activity): add support for diff in the log edit
+	buffer
+
+	* vc-clearcase.el (clearcase-diff-with-diff): use
+	`shell-command-to-string' to prevent erasing previous content in
+	the diff buffer.
+	(vc-clearcase-diff): bind rev1 and rev2 locally for each file
+
 2010-01-12  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (vc-clearcase-root): use `expand-file-name' on
